--- a/.github/workflows/tag-update-release-branch.yml
+++ b/.github/workflows/tag-update-release-branch.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: tag-update-flow
+name: tag-update-release-flow
 
 on:
   push:
