--- a/.github/workflows/tag-update-release-branch.yml
+++ b/.github/workflows/tag-update-release-branch.yml
@@ -37,7 +37,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.SARAH_ACTIONS_PAT }}
         VERSION: ${{ steps.get_version.outputs.VERSION }}
         BRANCH: ${{ steps.get_branch.outputs.BRANCH }}
-        ACTOR: ${{ github.actor }}
+        ACTOR: ${{ github.head_commit.author.username }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       working-directory: vault
       run: |
