--- a/.github/workflows/update-release-branch.yml
+++ b/.github/workflows/update-release-branch.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: tag-master-flow
+name: update-release-flow
 
 on:
   push:
@@ -9,9 +7,14 @@ on:
 
 jobs:
   minor-tag:
-    if: github.event.base_ref == 'refs/heads/master' || startsWith(github.event.base_ref,'refs/heads/release/') != false
+    if: startsWith(github.event.base_ref,'refs/heads/release/') != false
     runs-on: ubuntu-latest
     steps:
+    - name: Get the base branch
+      env:
+        BASE_BRANCH: ${{ github.event.base_ref }}
+      id: get_branch
+      run: echo ::set-output name=BRANCH::${BASE_BRANCH/refs\/heads\//}
     - name: Get the tag version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
@@ -22,22 +25,22 @@ jobs:
     - name: Checkout Vault
       uses: actions/checkout@v2
       with:
+        ref: ${{ steps.get_branch.outputs.BRANCH }}
         repository: sarahethompson/vault
         token: ${{ secrets.SARAH_ACTIONS_PAT }}
         path: vault
-    - uses: Dovyski/payload-info-action@master
-      with:
-        dump: true
-    - name: Update go.mod and push changes master (minor bump)
+    - uses: ./main/.github/actions/update-mod-version
+      id: update-vault
       env:
         GOPRIVATE: "github.com/hashicorp/*"
         GITHUB_TOKEN: ${{ secrets.SARAH_ACTIONS_PAT }}
         VERSION: ${{ steps.get_version.outputs.VERSION }}
         ACTOR: ${{ github.event.head_commit.author.username }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      working-directory: vault
-      run: |
-        ../main/.github/scripts/update-vault.sh "master" "@latest"
+      with:
+        branch: ${{ steps.get_branch.outputs.BRANCH }}
+        update-strategy: "@${{ steps.get_branch.outputs.BRANCH }}"
+        working-directory: 'vault'
     - name: Slack failure
       uses: act10ns/slack@v1
       id: slack-failure
