--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - master
       - 'release/*'
+  workflow_dispatch:
 jobs:
   bump-plugin-version:
     runs-on: ubuntu-latest
