--- a/.github/actions/update-mod-version/action.yml
+++ b/.github/actions/update-mod-version/action.yml
@@ -1,22 +1,20 @@
 name: 'Update module version'
 description: 'Update plugin module version in target repo.'
 inputs:
+  target-repo:
+    description: 'Target repo in the format - github.com/owner/repo'
+    required: true
   branch:  # id of input
-    description: 'Branch of target repo to checkout.'
+    description: 'Branch of target repo to checkout and update.'
     required: true
-    default: 'master'
   update-strategy:  # id of input
-    description: 'How to update the go module.'
+    description: "How to update the go module. This is used directly in the go get command. 
+      For example 'latest', 'master', 'v1.2.3' https://golang.org/cmd/go/#hdr-Module_queries."
     required: true
-    default: '@latest'
-  working-directory:
-    description: 'Overwrite working directory if needed.'
-    required: true
-    default: ${{ github.workspace }}
 runs:
   using: "composite"
   steps:
     - name: Update go.mod + vendor dir and create PR with changes.
       shell: bash
       working-directory: ${{ inputs.working-directory }}
-      run: ${{ github.action_path }}/update-mod.sh ${{ inputs.branch }} ${{ inputs.update-strategy }}
+      run: ${{ github.action_path }}/update-mod.sh ${{ inputs.branch }} ${{ inputs.update-strategy }} ${{ inputs.target-repo }}
