--- a/.github/actions/update-mod-version/action.yml
+++ b/.github/actions/update-mod-version/action.yml
@@ -4,10 +4,10 @@ inputs:
   target-repo:
     description: 'Target repo in the format - github.com/owner/repo'
     required: true
-  branch:  # id of input
+  branch:
     description: 'Branch of target repo to checkout and update.'
     required: true
-  update-strategy:  # id of input
+  update-strategy:
     description: "How to update the go module. This is used directly in the go get command. 
       For example 'latest', 'master', 'v1.2.3' https://golang.org/cmd/go/#hdr-Module_queries."
     required: true
