--- a/.github/actions/update-mod-version/action.yml
+++ b/.github/actions/update-mod-version/action.yml
@@ -8,7 +8,7 @@ inputs:
     description: 'Branch of target repo to checkout and update.'
     required: true
   update-strategy:
-    description: "How to update the go module. This is used directly in the go get command. 
+    description: "How to update the go module. This is used directly in the `go get` command. 
       For example 'latest', 'master', 'v1.2.3' https://golang.org/cmd/go/#hdr-Module_queries."
     required: true
 runs:
