--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@master
       with:
         fetch-depth: '0'
-    - name: Bump version and push tag.
+    - name: Bump version and push tag
       id: version-bump
       uses: sarahethompson/github-tag-action@fix-default-bump-none
       env:
