--- a/.github/workflows/update-release-branch.yml
+++ b/.github/workflows/update-release-branch.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Get the tag version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-    - name: Checkout Plugin
+    - name: Checkout plugin
       uses: actions/checkout@v2
       with:
         path: main
