--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
       - 'release/*'
+  pull_request:
+    branches: [ main ]
+    types: [closed]
 jobs:
   bump-plugin-version:
     if: github.event.pull_request.merged == true
