--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -8,6 +8,10 @@ on:
     branches: [ main ]
     types: [closed]
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: hmarr/debug-action@v2
   bump-plugin-version:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
@@ -25,7 +29,7 @@ jobs:
         WITH_V: true
         DEFAULT_BUMP: none
         TAG_CONTEXT: branch
-        RELEASE_BRANCHES: release/.*,master
+        RELEASE_BRANCHES: release/.*,main
     - name: Slack tag creation
       id: slack-tag
       uses: Ilshidur/action-slack@master
