--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: get labels name
         env:
-          LABEL: ${{ fromJSON(github) }}
+          LABEL: ${{ toJSON(github) }}
         run: |
           echo "$LABEL"
   bump-plugin-version:
