--- a/.github/workflows/update-vault.yml
+++ b/.github/workflows/update-vault.yml
@@ -1,4 +1,4 @@
-name: update-release-flow
+name: update-vault-branches
 
 on:
   push:
@@ -6,20 +6,26 @@ on:
       - 'v*'
 
 jobs:
-  minor-tag:
+  set-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      branch: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+    - id: set-matrix
+      run: echo "::set-output name=matrix::{\"include\":[{\"branch\":\"master\",\"update-strategy\":\"latest\"},{\"branch\":\"${BASE_BRANCH/refs\/heads\//}\",\"update-strategy\":\"${BASE_BRANCH/refs\/heads\//}\"}]}"
+
+  update-vault:
+    needs: set-matrix
     if: startsWith(github.event.base_ref,'refs/heads/release/') != false
     runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{fromJson(needs.set-matrix.outputs.matrix)}}
     steps:
-    - name: Get the base branch
-      env:
-        BASE_BRANCH: ${{ github.event.base_ref }}
-      id: get_branch
-      run: echo ::set-output name=BRANCH::${BASE_BRANCH/refs\/heads\//}
     - name: Get the tag version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     - uses: sarahethompson/go-update-mod-dependencies@v1
-      id: update-vault
+      id: update-vault-release-branch
       env:
         GOPRIVATE: "github.com/hashicorp/*"
         GITHUB_TOKEN: ${{ secrets.SARAH_ACTIONS_PAT }}
@@ -27,8 +33,8 @@ jobs:
         ACTOR: ${{ github.event.head_commit.author.username }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       with:
-        branch: ${{ steps.get_branch.outputs.BRANCH }}
-        update-strategy: "${{ steps.get_branch.outputs.BRANCH }}"
+        branch: ${{ matrix.branch }}
+        update-strategy: ${{ matrix.update-strategy }}
         target-repo: 'github.com/sarahethompson/vault'
     - name: Slack failure
       uses: act10ns/slack@v1
