backport of commit cbb9a4c74631f40b2b25a17adc78d01a7c1aae05

--- a/.github/workflows/update-vault.yml
+++ b/.github/workflows/update-vault.yml
@@ -9,7 +9,7 @@ jobs:
   set-matrix:
     runs-on: ubuntu-latest
     outputs:
-      branch: ${{ steps.set-matrix.outputs.matrix }}
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - id: set-matrix
       run: echo "::set-output name=matrix::{\"include\":[{\"branch\":\"master\",\"update-strategy\":\"latest\"},{\"branch\":\"${BASE_BRANCH/refs\/heads\//}\",\"update-strategy\":\"${BASE_BRANCH/refs\/heads\//}\"}]}"
