backport of commit e7cdcdac5e81d788a1c137a2dc0ad1ac78dd1bdd

--- a/.github/workflows/update-vault.yml
+++ b/.github/workflows/update-vault.yml
@@ -12,6 +12,8 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - id: set-matrix
+      env:
+        BASE_BRANCH: ${{ github.event.base_ref }}
       run: echo "::set-output name=matrix::{\"include\":[{\"branch\":\"master\",\"update-strategy\":\"latest\"},{\"branch\":\""${BASE_BRANCH}\"",\"update-strategy\":\""${BASE_BRANCH}\""}]}"
 
   update-vault:
