backport of commit b2b626682e7202669c660d234a24a815052363ac

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -5,7 +5,48 @@ on:
       - 'release/*'
     types: [closed]
 jobs:
+  bump-plugin-version-dry-run:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    outputs:
+      new_tag: ${{ steps.version-bump.outputs.new_tag }}
+    steps:
+    - name: Checkout
+      id: checkout
+      uses: actions/checkout@master
+      with:
+        fetch-depth: '0'
+    - name: Bump version and push tag
+      id: version-bump
+      uses: sarahethompson/github-tag-action@fix-default-bump-none
+      env:
+        GITHUB_TOKEN: ${{ secrets.SARAH_ACTIONS_PAT }}
+        WITH_V: true
+        DRY_RUN: true
+        DEFAULT_BUMP: none
+        TAG_CONTEXT: branch
+        RELEASE_BRANCHES: release/.*
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
+        SLACK_ICON: https://ibb.co/jv6xRLp
+        SLACK_MESSAGE: 'Tag authorization needed for $GITHUB_REPOSITORY:${{ steps.version-bump.outputs.new_tag }}'
+        SLACK_TITLE: Plugin Tag
+        SLACK_USERNAME: vault-eco-bot
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+    - name: Slack failure
+      uses: act10ns/slack@v1
+      id: slack-failure
+      if: failure()
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      with:
+        status: ${{ job.status }}
+    
   bump-plugin-version:
+    needs: bump-plugin-version-dry-run
+    environment: tag_authorization
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
@@ -19,10 +60,8 @@ jobs:
       uses: sarahethompson/github-tag-action@fix-default-bump-none
       env:
         GITHUB_TOKEN: ${{ secrets.SARAH_ACTIONS_PAT }}
-        WITH_V: true
-        DEFAULT_BUMP: none
-        TAG_CONTEXT: branch
-        RELEASE_BRANCHES: release/.*,main
+        CUSTOM_TAG: ${{needs.bump-plugin-version-dry-run.outputs.new}}
+        RELEASE_BRANCHES: release/.*
     - name: Slack tag creation
       id: slack-tag
       uses: Ilshidur/action-slack@master
@@ -40,4 +79,5 @@ jobs:
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       with:
-        status: ${{ job.status }}      
+        status: ${{ job.status }}
+
