--- a/.github/workflows/update-vault.yml
+++ b/.github/workflows/update-vault.yml
@@ -14,7 +14,7 @@ jobs:
     - id: set-matrix
       env:
         BASE_BRANCH: ${{ github.event.base_ref }}
-      run: echo "::set-output name=matrix::{\"include\":[{\"branch\":\"master\",\"update-strategy\":\"latest\"},{\"branch\":\""${BASE_BRANCH}\"",\"update-strategy\":\""${BASE_BRANCH}\""}]}"
+      run: echo "::set-output name=matrix::{\"include\":[{\"branch\":\"master\",\"update-strategy\":\"latest\"},{\"branch\":\""${BASE_BRANCH/refs\/heads\//}\"",\"update-strategy\":\""${BASE_BRANCH/refs\/heads\//}\""}]}"
 
   update-vault:
     needs: set-matrix
