Test pr label (#40)
* no message

* no message

* no message

--- a/.github/workflows/update-vault.yml
+++ b/.github/workflows/update-vault.yml
@@ -2,8 +2,8 @@ name: update-vault-branches
 
 on:
   push:
-    tags:        
-      - 'v*'
+    tags:
+      - "v*"
 
 jobs:
   set-matrix:
@@ -11,8 +11,10 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-    - id: set-matrix
-      run: echo "::set-output name=matrix::{\"include\":[{\"branch\":\"master\",\"update-strategy\":\"latest\"},{\"branch\":\""${BASE_BRANCH}\"",\"update-strategy\":\""${BASE_BRANCH}\""}]}"
+      - id: set-matrix
+        env:
+          BASE_BRANCH: ${{ github.event.base_ref }}
+        run: echo "::set-output name=matrix::{\"include\":[{\"branch\":\"master\",\"update-strategy\":\"latest\"},{\"branch\":\""${BASE_BRANCH/refs\/heads\//}\"",\"update-strategy\":\""${BASE_BRANCH/refs\/heads\//}\""}]}"
 
   update-vault:
     needs: set-matrix
@@ -21,26 +23,26 @@ jobs:
     strategy:
       matrix: ${{fromJson(needs.set-matrix.outputs.matrix)}}
     steps:
-    - name: Get the tag version
-      id: get_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-    - uses: sarahethompson/go-update-mod-dependencies@v1
-      id: update-vault-release-branch
-      env:
-        GOPRIVATE: "github.com/hashicorp/*"
-        GITHUB_TOKEN: ${{ secrets.SARAH_ACTIONS_PAT }}
-        VERSION: ${{ steps.get_version.outputs.VERSION }}
-        ACTOR: ${{ github.event.head_commit.author.username }}
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      with:
-        branch: ${{ matrix.branch }}
-        update-strategy: ${{ matrix.update-strategy }}
-        target-repo: 'github.com/sarahethompson/vault'
-    - name: Slack failure
-      uses: act10ns/slack@v1
-      id: slack-failure
-      if: failure()
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      with:
-        status: ${{ job.status }}
+      - name: Get the tag version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - uses: sarahethompson/go-update-mod-dependencies@v1
+        id: update-vault-release-branch
+        env:
+          GOPRIVATE: "github.com/hashicorp/*"
+          GITHUB_TOKEN: ${{ secrets.SARAH_ACTIONS_PAT }}
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
+          ACTOR: ${{ github.event.head_commit.author.username }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        with:
+          branch: ${{ matrix.branch }}
+          update-strategy: ${{ matrix.update-strategy }}
+          target-repo: "github.com/sarahethompson/vault"
+      - name: Slack failure
+        uses: act10ns/slack@v1
+        id: slack-failure
+        if: failure()
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        with:
+          status: ${{ job.status }}
