--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -32,9 +32,9 @@ jobs:
         SLACK_COLOR: ${{ job.status }}
         SLACK_ICON: https://ibb.co/jv6xRLp
         SLACK_MESSAGE: |
-          'Tag authorization needed for ${{ github.repository }}:${{ steps.version-bump.outputs.new_tag }}. \
-          Tag will be pushed to: ${{github.sha}} - ${{github.base_ref}} \
-          Please approve here - https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}.'
+          Tag authorization needed for release ${{ steps.version-bump.outputs.new_tag }} of ${{ github.repository }}.
+          Tag will be pushed to: https://github.com/hashicorp/${{ github.repository }}/commit/${{ github.sha }} on branch: ${{github.base_ref}}
+          Please approve here - https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}.
         SLACK_TITLE: Plugin Tag
         SLACK_USERNAME: vault-eco-bot
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
