--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -33,7 +33,7 @@ jobs:
         SLACK_ICON: https://ibb.co/jv6xRLp
         SLACK_MESSAGE: |
           Tag authorization needed for release ${{ steps.version-bump.outputs.new_tag }} of ${{ github.repository }}.
-          Tag will be pushed to: https://github.com/hashicorp/${{ github.repository }}/commit/${{ github.sha }} on branch: ${{github.base_ref}}
+          Tag will be pushed to: https://github.com/${{ github.repository }}/commit/${{ github.sha }} on branch: ${{github.base_ref}}
           Please approve here - https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}.
         SLACK_TITLE: Plugin Tag
         SLACK_USERNAME: vault-eco-bot
