--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -58,7 +58,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: '0'
-    - name: Bump version and push tag
+    - name: Bump version and push tag.
       id: version-bump
       uses: sarahethompson/github-tag-action@fix-default-bump-none
       env:
