--- a/.github/workflows/test-gpg.yml
+++ b/.github/workflows/test-gpg.yml
@@ -33,7 +33,7 @@ jobs:
         uses: hashicorp/ghaction-import-gpg@v2.1.0
         env:
           GPG_PRIVATE_KEY: ${{ secrets.TEST_GPG_KEY }}
-          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          PASSPHRASE: ${{ secrets.TEST_PASSPHRASE }}
       # - name: Run GoReleaser
       #   uses: goreleaser/goreleaser-action@v2
       #   with:
