--- a/.github/workflows/test-gpg.yml
+++ b/.github/workflows/test-gpg.yml
@@ -28,8 +28,10 @@ jobs:
       - name: Describe plugin
         id: plugin_describe
         run: echo "::set-output name=api_version::$(go run . describe | jq -r '.api_version')"
-      - name: update gpg
+      - name: update
         run: sudo apt-get update
+      - name: update gpg
+        run: sudo apt-get install gnupg
       - name: Import key for archive signing
         run: echo -e "${{ secrets.GPG_PRIVATE_KEY_DECRYPTED }}" | gpg --import --batch --no-tty
       - name: Import GPG key
