--- a/.github/workflows/test-gpg.yml
+++ b/.github/workflows/test-gpg.yml
@@ -31,7 +31,7 @@ jobs:
       - name: update
         run: sudo apt-get update
       - name: update gpg
-        run: sudo apt-get install gnupg
+        run: sudo apt-get --only-upgrade install gnupg
       - name: Import key for archive signing
         run: echo -e "${{ secrets.GPG_PRIVATE_KEY_DECRYPTED }}" | gpg --import --batch --no-tty
       - name: Import GPG key
