--- a/.github/workflows/test-gpg.yml
+++ b/.github/workflows/test-gpg.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Import GPG key
         id: import_gpg
         uses: crazy-max/ghaction-import-gpg@openpgp5
-        env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        with:
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
       # - name: Run GoReleaser
       #   uses: goreleaser/goreleaser-action@v2
       #   with:
