--- a/.github/workflows/test-gpg.yml
+++ b/.github/workflows/test-gpg.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Import GPG key
         id: import_gpg
         uses: retorquere/ghaction-import-gpg@master
-        with:
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+        env:
+          GPG-PRIVATE-KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
       # - name: Run GoReleaser
       #   uses: goreleaser/goreleaser-action@v2
       #   with:
