--- a/.github/workflows/test-gpg.yml
+++ b/.github/workflows/test-gpg.yml
@@ -28,25 +28,25 @@ jobs:
       - name: Describe plugin
         id: plugin_describe
         run: echo "::set-output name=api_version::$(go run . describe | jq -r '.api_version')"
-      - name: update
-        run: sudo apt-get update
-      - name: update gpg
-        run: sudo apt-get --only-upgrade install gnupg
-      - name: Import key for archive signing
-        run: echo -e "${{ secrets.GPG_PRIVATE_KEY_DECRYPTED }}" | gpg --import --batch --no-tty
+      # - name: update
+      #   run: sudo apt-get update
+      # - name: update gpg
+      #   run: sudo apt-get --only-upgrade install gnupg
+      # - name: Import key for archive signing
+      #   run: echo -e "${{ secrets.GPG_PRIVATE_KEY_DECRYPTED }}" | gpg --import --batch --no-tty
       - name: Import GPG key
         id: import_gpg
-        uses: retorquere/ghaction-import-gpg@master
+        uses: hashicorp/ghaction-import-gpg@v2.1.0
         with:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.TEST_PASSPHRASE }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
-      # - name: Run GoReleaser
-      #   uses: goreleaser/goreleaser-action@v2
-      #   with:
-      #     version: latest
-      #     args: release --rm-dist
-      #   env:
-      #     GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     API_VERSION: ${{ steps.plugin_describe.outputs.api_version }}
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          version: latest
+          args: release --rm-dist
+        env:
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          API_VERSION: ${{ steps.plugin_describe.outputs.api_version }}
