--- a/.github/workflows/changelog-checker.yml
+++ b/.github/workflows/changelog-checker.yml
@@ -1,9 +1,11 @@
 # This workflow checks that there is either a 'pr/no-changelog' label applied to a PR
 # or there is a changelog/<pr number>.txt file associated with a PR for a changelog entry
 
+name: Check Changelog
+
 on:
   pull_request:
-    types: [opened, synchronize, labeled]
+    types: [opened, synchronize, labeled, unlabeled]
     # Runs on PRs to master and all release branches
     branches:
       - cl-check/*
